# kindle-highlights

./: My Clippings.txt  README.md  dune-project  kindle_highlights.opam
lib/: dune  kindle.ml  kindle.mli  parser.ml  quotes.ml
test/: dune
